force-app/main/default/objects/Liability__c/Liability__c.object-meta.xml
<CustomObject>
    <description>This objects contains the Liability against an Assessment.</description>
    <label>Liability</label>
    <nameField>
        <displayFormat>LIA-{000000}</displayFormat>
        <label>Liability ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Liability</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>