force-app/main/default/objects/Liability__c/fields/Appeal_Deadline_Formula__c.field-meta.xml
<CustomField>
    <fullName>Appeal_Deadline_Formula__c</fullName>
    <formula>Appeal_Deadline__c  +  Appeal_Timeframe__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Appeal Deadline1</label>
    <type>Date</type>
</CustomField>