force-app/main/default/objects/Liability__c/fields/Assessment__c.field-meta.xml
<CustomField>
    <fullName>Assessment__c</fullName>
    <description>This creates a lookup relationship between a Liability and an Assessment.  This field is required.</description>
    <inlineHelpText>This creates a lookup relationship between a Liability and an Assessment.  This field is required.</inlineHelpText>
    <label>Assessment</label>
    <referenceTo>Assessments__c</referenceTo>
    <relationshipLabel>Liabilities</relationshipLabel>
    <relationshipName>Liability</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>