force-app/main/default/objects/Liability__c/fields/Assigned_Deputy_Name__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Deputy_Name__c</fullName>
    <description>Name of the Assigned Deputy</description>
    <formula>Case_Management__r.Assigned_Deputy__r.Name</formula>
    <inlineHelpText>Name of the Assigned Deputy</inlineHelpText>
    <label>Assigned Deputy Name</label>
    <type>Text</type>
</CustomField>