force-app/main/default/objects/Liability__c/fields/BOFE8A__c.field-meta.xml
<CustomField>
    <fullName>BOFE8A__c</fullName>
    <formula>CASE( Citation_Form_Assessment_Conga__c, 
'BOFE 240A', ',Violation - BOFE 008A', 
'BOFE 240B', ',Violation - BOFE 008A', 
'BOFE 335', ',Violation - BOFE 008A', 
'BOFE 336', ',Violation - BOFE 008A', 
'BOFE 812', ',Violation - BOFE 008A', 
'BOFE 814', ',Violation - BOFE 008A', 
'BOFE 815', ',Violation - BOFE 008A', 
'BOFE 816', ',Violation - BOFE 008A', 
NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BOFE8A</label>
    <type>Text</type>
</CustomField>