force-app/main/default/objects/Liability__c/fields/Citation_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Citation_Prefix__c</fullName>
    <formula>IF( !ISBLANK ( Manual_Citation_Number__c ),  LEFT(Manual_Citation_Number__c,2),
Case( Citation_Form_Assessment_Conga__c ,
'NTD', 'NTD ',
'BOFE 240A', 'PA ',
'BOFE 240B', 'WA ',
'BOFE 335', 'WC ',
'BOFE 336', 'SO ',
'BOFE 815', 'HC ',
'BOFE 816', 'HR ',
'BOFE 812', 'C ',
'BOFE 814', 'JL ',
'JEU 238e', 'JS ',
'JEU 238', 'J ',
'LR 240A', 'LR ',
'PW 336', 'PW SO ',
'PW 240A', 'PW PA ',
''))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Citation Prefix</label>
    <type>Text</type>
</CustomField>