force-app/main/default/objects/Liability__c/fields/Contractor__c.field-meta.xml
<CustomField>
    <fullName>Contractor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>For certain citations, the contractor is mentioned and displayed on the citation forms.</description>
    <inlineHelpText>Select the Contractor if required for citations created from this liability.</inlineHelpText>
    <label>Contractor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Liability</relationshipLabel>
    <relationshipName>Liability_Contractor</relationshipName>
    <type>Lookup</type>
</CustomField>