force-app/main/default/objects/Liability__c/fields/Date_Period_of_Wage_or_Premium_Unpaid__c.field-meta.xml
<CustomField>
    <fullName>Date_Period_of_Wage_or_Premium_Unpaid__c</fullName>
    <inlineHelpText>Enter the period during which the wages or premiums were unpaid. This is rendered on certain citation documents.</inlineHelpText>
    <label>Date/Period of Wage or Premium Unpaid</label>
    <length>120</length>
    <type>Text</type>
</CustomField>