force-app/main/default/objects/Liability__c/fields/Dates_or_Period_Uninsured__c.field-meta.xml
<CustomField>
    <fullName>Dates_or_Period_Uninsured__c</fullName>
    <inlineHelpText>To be printed on certain citation documents</inlineHelpText>
    <label>Dates or Period Uninsured</label>
    <length>120</length>
    <type>Text</type>
</CustomField>