force-app/main/default/objects/Liability__c/fields/Demand_Letter_Sent__c.field-meta.xml
<CustomField>
    <fullName>Demand_Letter_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The BOFE deputy will check the box once the demand letter is send.</description>
    <inlineHelpText>Box is check when demand letter is sent.</inlineHelpText>
    <label>Demand Letter Sent</label>
    <type>Checkbox</type>
</CustomField>