force-app/main/default/objects/Liability__c/fields/Employer_Industry__c.field-meta.xml
<CustomField>
    <fullName>Employer_Industry__c</fullName>
    <formula>Case_Management__r.NAICS_Code_Title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employer Industry</label>
    <type>Text</type>
</CustomField>