force-app/main/default/objects/Liability__c/fields/Garment_Fund_Referral_Date__c.field-meta.xml
<CustomField>
    <fullName>Garment_Fund_Referral_Date__c</fullName>
    <description>Date the liability was referred to the garment fund for payment to the claimant</description>
    <inlineHelpText>Required when referred</inlineHelpText>
    <label>Garment Fund Referral Date</label>
    <type>Date</type>
</CustomField>