force-app/main/default/objects/Liability__c/fields/I_am_assigned_deputy_s_senior__c.field-meta.xml
<CustomField>
    <fullName>I_am_assigned_deputy_s_senior__c</fullName>
    <description>To Filter all Liabilities assigned to the deputies who show the logged in user as their Manager</description>
    <formula>$User.Id = Case_Management__r.Assigned_Deputy__r.Manager__r.User__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>I am assigned deputy's senior</label>
    <type>Checkbox</type>
</CustomField>