force-app/main/default/objects/Liability__c/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <inlineHelpText>This industry appears on the Stop Order only (BOFE 336).</inlineHelpText>
    <label>Industry</label>
    <length>50</length>
    <type>Text</type>
</CustomField>