force-app/main/default/objects/Liability__c/fields/JEU_Number__c.field-meta.xml
<CustomField>
    <fullName>JEU_Number__c</fullName>
    <description>Required after Status is JEU Accepted. SR-012550 - changed field label.</description>
    <inlineHelpText>Once the JEU Referral is accepted, this field must be populated with the JEU Case #. If multiple JEU Numbers exist on this Case, enter them on the Case Violation Screen.</inlineHelpText>
    <label>Judgment Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>