force-app/main/default/objects/Liability__c/fields/JEU_Reject_Reason__c.field-meta.xml
<CustomField>
    <fullName>JEU_Reject_Reason__c</fullName>
    <description>If JEU Rejects this Case, they must enter a reason.  SR-012550 - changed field label.</description>
    <inlineHelpText>If JEU Rejects this Case, they must enter a reason</inlineHelpText>
    <label>Reject Reason</label>
    <type>TextArea</type>
</CustomField>