force-app/main/default/objects/Liability__c/fields/Legal_Consult__c.field-meta.xml
<CustomField>
    <fullName>Legal_Consult__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Provides a lookup to the Internal Employee who serves as the legal consult on a liability</description>
    <inlineHelpText>Select the person who serves as the legal consult for this liability.</inlineHelpText>
    <label>Legal Consult</label>
    <referenceTo>DIR_Employee__c</referenceTo>
    <relationshipLabel>Liability</relationshipLabel>
    <relationshipName>Liability</relationshipName>
    <type>Lookup</type>
</CustomField>