force-app/main/default/objects/Liability__c/fields/Liability_has_been_served__c.field-meta.xml
<CustomField>
    <fullName>Liability_has_been_served__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicate whether Liability has been served</description>
    <label>Liability has been served</label>
    <type>Checkbox</type>
</CustomField>