force-app/main/default/objects/Liability__c/fields/Liability_Service_Date__c.field-meta.xml
<CustomField>
    <fullName>Liability_Service_Date__c</fullName>
    <description>This field would populate from the citation created date, it is editable</description>
    <label>Liability Service Date</label>
    <type>Date</type>
</CustomField>