force-app/main/default/objects/Liability__c/fields/License_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>License_Registration_Number__c</fullName>
    <label>License/Registration Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>