force-app/main/default/objects/Liability__c/fields/Location_City__c.field-meta.xml
<CustomField>
    <fullName>Location_City__c</fullName>
    <formula>Assessment__r.Location_City__c</formula>
    <label>Location - City</label>
    <type>Text</type>
</CustomField>