force-app/main/default/objects/Liability__c/fields/Location_of_Violation_Address__c.field-meta.xml
<CustomField>
    <fullName>Location_of_Violation_Address__c</fullName>
    <description>Pulls the address info from the location of violations. Used for adding to output docs</description>
    <formula>IF (  NOT ( ISBLANK ( Location_of_Violations__c ) ),
Location_of_Violations__r.Address__c + ', ' + Location_of_Violations__r.City__c + ', ' +  TEXT (Location_of_Violations__r.State__c ) + ' ' +  Location_of_Violations__r.Zip_Code__c
, '')</formula>
    <label>Location of Violation - Address</label>
    <type>Text</type>
</CustomField>