force-app/main/default/objects/Liability__c/fields/Location_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Location_Zip_Code__c</fullName>
    <formula>Assessment__r.Location_Zip_Code__c</formula>
    <label>Location - Zip Code</label>
    <type>Text</type>
</CustomField>