force-app/main/default/objects/Liability__c/fields/NOF_Date__c.field-meta.xml
<CustomField>
    <fullName>NOF_Date__c</fullName>
    <description>Notice of Finding date</description>
    <label>NOF Date</label>
    <type>DateTime</type>
</CustomField>