force-app/main/default/objects/Liability__c/fields/Office_Fax__c.field-meta.xml
<CustomField>
    <fullName>Office_Fax__c</fullName>
    <formula>Case_Management__r.Office__r.Fax__c</formula>
    <label>Office Fax</label>
    <type>Text</type>
</CustomField>