force-app/main/default/objects/Liability__c/fields/Payment_Plan__c.field-meta.xml
<CustomField>
    <fullName>Payment_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Payment Plan for this Liabilities</description>
    <label>Payment Plan</label>
    <referenceTo>Payment_Plan__c</referenceTo>
    <relationshipLabel>Payment Plan Liabilities</relationshipLabel>
    <relationshipName>PaymentPlanLiability</relationshipName>
    <type>Lookup</type>
</CustomField>