force-app/main/default/objects/Liability__c/fields/Place_Served__c.field-meta.xml
<CustomField>
    <fullName>Place_Served__c</fullName>
    <description>Added to output documents</description>
    <inlineHelpText>Enter a description of the place where service took place. Address is expected.</inlineHelpText>
    <label>Place Served</label>
    <length>255</length>
    <type>Text</type>
</CustomField>