force-app/main/default/objects/Liability__c/fields/Refer_to_JEU_Date__c.field-meta.xml
<CustomField>
    <fullName>Refer_to_JEU_Date__c</fullName>
    <label>Referral Date</label>
    <type>Date</type>
</CustomField>