force-app/main/default/objects/Liability__c/fields/Residence_Location_Address__c.field-meta.xml
<CustomField>
    <fullName>Residence_Location_Address__c</fullName>
    <description>Pulls the address information down as text from the selected residence location for use on certain citation documents.</description>
    <formula>IF ( NOT ( ISBLANK (  Residence_Address__c  ) ), 
Residence_Address__r.Address__c + ', ' + Residence_Address__r.City__c + ', ' + TEXT (Residence_Address__r.State__c ) + ' ' + Residence_Address__r.Zip_Code__c 
, '')</formula>
    <inlineHelpText>Displayed on certain citation documents</inlineHelpText>
    <label>Residence Location - Address</label>
    <type>Text</type>
</CustomField>