force-app/main/default/objects/Liability__c/fields/SOL_Date_Calculation__c.field-meta.xml
<CustomField>
    <fullName>SOL_Date_Calculation__c</fullName>
    <formula>IF ( ISNULL( NOF_Date__c ), CreatedDate, NOF_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SOL Date Calculation</label>
    <type>DateTime</type>
</CustomField>