force-app/main/default/objects/Liability__c/fields/SOL_Deadline__c.field-meta.xml
<CustomField>
    <fullName>SOL_Deadline__c</fullName>
    <description>When there's open appeal, SOL Deadline Date calculated based on Notice Findings Date</description>
    <formula>IF ( AND(Open_Appeals__c &gt; 0, ISNULL( NOF_Date__c)), NULL,
(
IF(
	OR(
		Citation_Form_Assessment_Conga__c  == "BOFE 335",
		Citation_Form_Assessment_Conga__c  == "BOFE 336"
	),
IF(
  AND(
    MONTH( DATEVALUE(SOL_Date_Calculation__c) ) = 2,
    DAY( DATEVALUE(SOL_Date_Calculation__c) ) = 29,
    NOT( 
      OR( 
        MOD( YEAR( DATEVALUE(SOL_Date_Calculation__c) ), 400 ) = 0, 
        AND( 
          MOD( YEAR( DATEVALUE(SOL_Date_Calculation__c) ), 4 ) = 0,
          MOD( YEAR( DATEVALUE(SOL_Date_Calculation__c) ), 100 ) != 0
        )
      )
    ) 
  ),
  DATE( YEAR( DATEVALUE(SOL_Date_Calculation__c) ) + 1, 3, 1),
  DATE( YEAR( DATEVALUE(SOL_Date_Calculation__c) ) + 1, MONTH( DATEVALUE(SOL_Date_Calculation__c) ), DAY( DATEVALUE(SOL_Date_Calculation__c) ) )
),
IF(
	OR(
		Citation_Form_Assessment_Conga__c  == "BOFE 240A",
		Citation_Form_Assessment_Conga__c  == "BOFE 240B",
                Citation_Form_Assessment_Conga__c  == "BOFE 812",
                Citation_Form_Assessment_Conga__c  == "BOFE 814",
		Citation_Form_Assessment_Conga__c  == "BOFE 815",
                Citation_Form_Assessment_Conga__c  == "BOFE 816"
	),
IF(
  AND(
    MONTH( DATEVALUE(SOL_Date_Calculation__c) ) = 2,
    DAY( DATEVALUE(SOL_Date_Calculation__c) ) = 29,
    NOT( 
      OR( 
        MOD( YEAR( DATEVALUE(SOL_Date_Calculation__c) ), 400 ) = 0, 
        AND( 
          MOD( YEAR( DATEVALUE(SOL_Date_Calculation__c) ), 4 ) = 0,
          MOD( YEAR( DATEVALUE(SOL_Date_Calculation__c) ), 100 ) != 0
        )
      )
    ) 
  ),
  DATE( YEAR( DATEVALUE(SOL_Date_Calculation__c) ) + 3, 3, 1),
  DATE( YEAR( DATEVALUE(SOL_Date_Calculation__c) ) + 3, MONTH( DATEVALUE(SOL_Date_Calculation__c) ), DAY( DATEVALUE(SOL_Date_Calculation__c) ) )
),null)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SOL Deadline</label>
    <type>Date</type>
</CustomField>