force-app/main/default/objects/Liability__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <inlineHelpText>If Status = Admin Dismissed, must decide if associated violations should be Admin Dismissed as well and Penalties zeroed out.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Administrative Dismissal</fullName>
            </value>
            <value>
                <fullName>Affirmed</fullName>
            </value>
            <value>
                <fullName>Appeal Withdrawn</fullName>
            </value>
            <value>
                <fullName>Canceled-Invalid</fullName>
            </value>
            <value>
                <fullName>Demand Non-citable</fullName>
            </value>
            <value>
                <fullName>Dismissed</fullName>
            </value>
            <value>
                <fullName>Final</fullName>
            </value>
            <value>
                <fullName>Hearing Complete</fullName>
            </value>
            <value>
                <fullName>Judgment Accepted</fullName>
            </value>
            <value>
                <fullName>Judgment Rejected</fullName>
            </value>
            <value>
                <fullName>Modified</fullName>
            </value>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Out of Statute</fullName>
            </value>
            <value>
                <fullName>Paid Off</fullName>
            </value>
            <value>
                <fullName>Payment Plan</fullName>
            </value>
            <value>
                <fullName>Pending Writ</fullName>
            </value>
            <value>
                <fullName>Referred for Judgment</fullName>
            </value>
            <value>
                <fullName>Request Dismissal</fullName>
            </value>
            <value>
                <fullName>Settled</fullName>
            </value>
            <value>
                <fullName>Stop Order Only</fullName>
            </value>
            <value>
                <fullName>Under Appeal</fullName>
            </value>
            <value>
                <fullName>Under Writ</fullName>
            </value>
            <value>
                <fullName>Writ Affirmed</fullName>
            </value>
            <value>
                <fullName>Writ Modified</fullName>
            </value>
            <value>
                <fullName>Writ Received</fullName>
            </value>
            <value>
                <fullName>Writ Remanded</fullName>
            </value>
            <value>
                <fullName>Writ Settled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>