force-app/main/default/objects/Liability__c/fields/Subject_to_Writs__c.field-meta.xml
<CustomField>
    <fullName>Subject_to_Writs__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This box is to be checked via flow when Violation status is "Affirmed" or "Modified".</description>
    <label>Subject to Writs</label>
    <type>Checkbox</type>
</CustomField>