force-app/main/default/objects/Liability__c/fields/Time_of_Violation__c.field-meta.xml
<CustomField>
    <fullName>Time_of_Violation__c</fullName>
    <inlineHelpText>Will be printed on certain citation documents</inlineHelpText>
    <label>Time of Violation</label>
    <length>80</length>
    <type>Text</type>
</CustomField>