force-app/main/default/objects/Liability__c/fields/Total_Interest_Assessed__c.field-meta.xml
<CustomField>
    <fullName>Total_Interest_Assessed__c</fullName>
    <formula>If((RecordType.Name = 'BOFE' &amp;&amp; ISPICKVAL(Status__c, "Dismissed")),0, Assessment__r.Total_Interest_Assessed__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Interest assessed on all violations on this liability</inlineHelpText>
    <label>Total Interest Assessed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>