force-app/main/default/objects/Liability__c/fields/Total_Liability_Amount_Due__c.field-meta.xml
<CustomField>
    <fullName>Total_Liability_Amount_Due__c</fullName>
    <formula>Wage_Balance_Due__c + Penalty_Balance_Due__c + Total_Wage_Interest_Amount__c + Interest_Balance_Due__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Liability Amount Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>