force-app/main/default/objects/Liability__c/fields/Total_Wage_Payments_Received__c.field-meta.xml
<CustomField>
    <fullName>Total_Wage_Payments_Received__c</fullName>
    <description>Total of Wage payments received. Calculated when the totals on the parent penalty assessment are modified by a trigger on the assessment object.</description>
    <inlineHelpText>Total of all payments received against wages assessed.</inlineHelpText>
    <label>Total Wage Payments Received</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>